# robot-swiss-army-knife

./: README.md
behaviour_library/: CMakeLists.txt  README.md  package.xml
behaviour_library/behaviour_trees/: example-tree.xml  object-pose-estimation-tree.xml
behaviour_library/config/: example-config.yaml
behaviour_library/include/behaviour_library/: calculate_pose_behaviour.hpp  check_visibility_behaviour.hpp  cloud_sub_behaviour.hpp  extract_roi_3d_points_behaviour.hpp  image_sub_behaviour.hpp  move_base_behaviour.hpp  pose_pub_behaviour.hpp  segment_objects_behaviour.hpp
behaviour_library/include/behaviour_library/trees/: example_tree_executor.hpp
behaviour_library/launch/: tree_executor.launch.xml
behaviour_library/src/: calculate_pose_behaviour.cpp  check_visibility_behaviour.cpp  cloud_sub_behaviour.cpp  extract_roi_3d_points_behaviour.cpp  image_sub_behaviour.cpp  move_base_behaviour.cpp  pose_pub_behaviour.cpp  segment_objects_behaviour.cpp
behaviour_library/src/trees/: example_tree_executor.cpp
control/: README.md
control/moveit_controller/: CMakeLists.txt  README.md  package.xml
control/moveit_controller/include/moveit_controller/: cartesian_controller.hpp
control/moveit_controller/launch/: cartesian_controller.launch.py
control/moveit_controller/src/: cartesian_controller.cpp
control/tiago_cartesian_controller/: CMakeLists.txt  README.md  package.xml
control/tiago_cartesian_controller/include/tiago_cartesian_controller/: cartesian_controller.hpp  utils.hpp
control/tiago_cartesian_controller/launch/: cartesian_controller.launch.py
control/tiago_cartesian_controller/src/: cartesian_controller.cpp
docker/: Dockerfile  tiago-cyclone-config.xml
knowledge/: README.md
knowledge/vlm_query_interface/: README.md  package.xml  setup.cfg  setup.py
knowledge/vlm_query_interface/launch/: query_interface.launch.py
knowledge/vlm_query_interface/vlm_query_interface/: query_interface_node.py
knowledge/vlm_query_interface/vlm_query_interface/vlm_interfaces/: __init__.py  ollama.py  query_interface_factory.py  space_om.py  vlm_base.py
perception/: README.md
perception/object_visibility_checker/: README.md  package.xml  setup.cfg  setup.py
perception/object_visibility_checker/launch/: visibility_checker.launch.py
perception/object_visibility_checker/object_visibility_checker/: visibility_checker.py
perception/point_cloud_utils/: CMakeLists.txt  README.md  package.xml
perception/point_cloud_utils/include/point_cloud_utils/: pose_calculator.hpp  roi_3d_point_extractor.hpp
perception/point_cloud_utils/launch/: pose_calculator.launch.py  roi_extractor.launch.py
perception/point_cloud_utils/src/: pose_calculator.cpp  roi_3d_point_extractor.cpp
perception/semantic_segmentation/: README.md  package.xml  setup.cfg  setup.py
perception/semantic_segmentation/config/: object_classes.yaml
perception/semantic_segmentation/launch/: segmentation.launch.py
perception/semantic_segmentation/semantic_segmentation/: segment_objects.py
perception/semantic_segmentation/test/: test_segmentation_client_tiago.py
perception/test/integration/: test_pose_estimation_tiago.py
robot_swiss_knife_msgs/: CMakeLists.txt  package.xml
robot_swiss_knife_msgs/action/: QueryVLM.action
robot_swiss_knife_msgs/srv/: CalculatePoseFromCloud.srv  CheckObjectVisibility.srv  EstimateAnthropometricParameters.srv  ExtractROI3DPoints.srv  SegmentObjects.srv
skills/hand_over_skill/: CMakeLists.txt  README.md  package.xml
skills/hand_over_skill/action/: HandOverSkill.action
skills/hand_over_skill/include/hand_over_skill/: hand_over_skill.hpp
skills/hand_over_skill/launch/: hand_over_skill.launch.py
skills/hand_over_skill/src/: hand_over_skill.cpp  start_skill.cpp
skills/move_base_skill/: CMakeLists.txt  README.md  package.xml
skills/move_base_skill/action/: MoveBaseSkill.action
skills/move_base_skill/include/move_base_skill/: move_base_skill.hpp
skills/move_base_skill/launch/: move_base_skill.launch.py
skills/move_base_skill/src/: move_base_skill.cpp  start_skill.cpp
skills/move_base_skill/test/: skill_test.py
