<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_segmentation</name>
  <version>1.0.0</version>
  <description>A package with utilities for semantic segmentation</description>
  <maintainer email="alemitr@chalmers.se">Alex Mitrevski</maintainer>
  <license>Apache-2.0</license>

  <build_depend>robot_swiss_knife_msgs</build_depend>

  <exec_depend>robot_swiss_knife_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
